@@ -68,10 +68,14 @@ public class TokenFormatter {
     private static String EMPTY_STRING = "";
     private static final Logger LOGGER = Logger.getLogger(TokenFormatter.class.getName());
     // it's for testing
-    protected static int unitTestCarretPosition = -1;
+    private static int unitTestCarretPosition = -1;
 
-//    private final Context context;
+
     public TokenFormatter() {
+    }
+
+    protected static void setUnitTestCarretPosition(int unitTestCarretPosition) {
+        TokenFormatter.unitTestCarretPosition = unitTestCarretPosition;
     }
 
     protected static class DocumentOptions {
@@ -166,7 +170,8 @@ public class TokenFormatter {
         public CodeStyle.WrapStyle wrapMethodParams;
         public CodeStyle.WrapStyle wrapMethodCallArgs;
         public CodeStyle.WrapStyle wrapChainedMethodCalls;
-        public CodeStyle.WrapStyle wrapArrayInit;
+        @org.netbeans.api.annotations.common.SuppressWarnings({"URF_UNREAD_PUBLIC_OR_PROTECTED_FIELD"})
+        public CodeStyle.WrapStyle wrapArrayInit; // not implemented yet
         public CodeStyle.WrapStyle wrapFor;
         public CodeStyle.WrapStyle wrapForStatement;
         public CodeStyle.WrapStyle wrapIfStatement;
@@ -182,11 +187,17 @@ public class TokenFormatter {
         public boolean alignMultilineMethodParams;
         public boolean alignMultilineCallArgs;
         public boolean alignMultilineImplements;
+        @org.netbeans.api.annotations.common.SuppressWarnings({"URF_UNREAD_PUBLIC_OR_PROTECTED_FIELD"})
         public boolean alignMultilineParenthesized; // not implemented yet
+        @org.netbeans.api.annotations.common.SuppressWarnings({"URF_UNREAD_PUBLIC_OR_PROTECTED_FIELD"})
         public boolean alignMultilineBinaryOp; // not implemented yet
+        @org.netbeans.api.annotations.common.SuppressWarnings({"URF_UNREAD_PUBLIC_OR_PROTECTED_FIELD"})
         public boolean alignMultilineTernaryOp; // not implemented yet
-        public boolean alignMultilineAssignment;    // not implemented yet
-        public boolean alignMultilineFor;       // not implemented yet
+        @org.netbeans.api.annotations.common.SuppressWarnings({"URF_UNREAD_PUBLIC_OR_PROTECTED_FIELD"})
+        public boolean alignMultilineAssignment; // not implemented yet
+        @org.netbeans.api.annotations.common.SuppressWarnings({"URF_UNREAD_PUBLIC_OR_PROTECTED_FIELD"})
+        public boolean alignMultilineFor; // not implemented yet
+        @org.netbeans.api.annotations.common.SuppressWarnings({"URF_UNREAD_PUBLIC_OR_PROTECTED_FIELD"})
         public boolean alignMultilineArrayInit; //not implemented yet
         public boolean groupMulitilineAssignment;
         public boolean groupMulitilineArrayInit;
@@ -392,15 +403,15 @@ public class TokenFormatter {
                     boolean caretInTemplateSolved = false;
                     int htmlIndent = -1;
                     int index = 0;
-                    int newLines = 0;
-                    int countSpaces = 0;
+                    int newLines;
+                    int countSpaces;
                     int column = 0;
                     int indentOfOpenTag = 0;
                     final Deque<Integer> lastBracedBlockIndent = new ArrayDeque<Integer>();
 
                     FormatToken formatToken;
                     String newText = null;
-                    String oldText = null;
+                    String oldText;
                     int changeOffset = -1;
                     int deltaForLastMoveBeforeLineComment = 0;
                     FormatToken.AnchorToken lastAnchor = null;
@@ -1138,13 +1149,13 @@ public class TokenFormatter {
                                                 int lineNumber = Utilities.getLineOffset(doc, offset);
                                                 Integer suggestedIndent = suggestedLineIndents != null
                                                         ? suggestedLineIndents.get(lineNumber)
-                                                        : new Integer(0);
+                                                        : Integer.valueOf(0);
                                                 if (suggestedIndent == null) {
                                                     // XXX this is a hack
                                                     //sometimes the html formatter doesn't catch the first line.
                                                     suggestedIndent = suggestedLineIndents.get(lineNumber + 1) != null
                                                             ? suggestedLineIndents.get(lineNumber + 1)
-                                                            : new Integer(0);
+                                                            : Integer.valueOf(0);
                                                 }
 
                                                 int lineOffset = Utilities.getRowStart(doc, offset);
@@ -1373,7 +1384,7 @@ public class TokenFormatter {
                                     newLines = 1;
                                 }
                                 if (afterSemi) {
-                                    if (oldText == null || (oldText != null && countOfNewLines(oldText) == 0)) {
+                                    if (oldText == null || countOfNewLines(oldText) == 0) {
                                         if (formatToken.getId() == FormatToken.Kind.TEXT) {
                                             if (docOptions.wrapStatementsOnTheSameLine) {
                                                 if (docOptions.wrapBlockBrace || !"}".equals(formatToken.getOldText())) {
@@ -1398,11 +1409,8 @@ public class TokenFormatter {
                                             newLines = countOfNewLines(oldText);
                                         }
                                     }
-                                    afterSemi = false;
                                 }
-//                                if (indentLine && indentRule && formatToken.getId() != FormatToken.Kind.CLOSE_TAG) {
-//                                    countSpaces = Math.max(countSpaces, indent);
-//                                }
+
                                 newText = createWhitespace(docOptions, newLines, countSpaces);
                                 if (wsBetweenBraces) {
                                     if (lastBracePlacement == CodeStyle.BracePlacement.PRESERVE_EXISTING) {
@@ -1419,12 +1427,7 @@ public class TokenFormatter {
                                     int caretPosition = caretOffset + delta;
                                     if (caretPosition == formatContext.endOffset() && oldText.length() > 0 && newText.length() > 0
                                             && oldText.charAt(0) == ' ' && newText.charAt(0) != ' ' && 0 != countOfNewLines(oldText)) {
-//                                        int positionOldText = caretPosition - realOffset - 1;
-//                                        if (positionOldText > -1 && positionOldText < oldText.length()
-//                                                && oldText.charAt(positionOldText) == ' '
-//                                                && newText.charAt(0) != ' ') {
                                         newText = ' ' + newText;   // templates like public, return ...
-//                                        }
                                         caretInTemplateSolved = true;
                                     }
                                 }
@@ -1518,6 +1521,8 @@ public class TokenFormatter {
                                         deltaForLastMoveBeforeLineComment = delta;
                                     }
                                     break;
+                                default:
+                                    //no-op
                             }
                         }
 
@@ -1603,9 +1608,9 @@ public class TokenFormatter {
             }
 
             private Whitespace countWhiteSpaceBeforeRightBrace(CodeStyle.BracePlacement placement, int currentLine, int addLine, int indent, List<FormatToken> formatTokens, int currentIndex, CharSequence oldText, int lastBracedBlockIndent) {
-                int lines = 0;
-                int spaces = 0;
-                Whitespace result = null;
+                int lines;
+                int spaces;
+                Whitespace result;
                 if (placement == CodeStyle.BracePlacement.PRESERVE_EXISTING) {
                     result = countWhiteSpaceForPreserveExistingBracePlacement(oldText, lastBracedBlockIndent);
                 } else {
@@ -1641,8 +1646,8 @@ public class TokenFormatter {
             }
 
             private Whitespace countWSBeforeKeyword(boolean placeOnNewLine, boolean placeSpaceBefore, int currentIndent, List<FormatToken> formatTokens, int currentIndex) {
-                int lines = 0;
-                int spaces = 0;
+                int lines;
+                int spaces;
                 if (placeOnNewLine) {
                     lines = 1;
                     spaces = currentIndent;
@@ -1673,7 +1678,7 @@ public class TokenFormatter {
             }
 
             private boolean isOpenAndCloseTagOnOneLine(List<FormatToken> formatTokens, int currentIndex) {
-                boolean result = false;
+                boolean result;
                 FormatToken token = formatTokens.get(currentIndex);
                 do {
                     token = formatTokens.get(currentIndex);
@@ -1838,23 +1843,6 @@ public class TokenFormatter {
                 return sb.toString();
             }
 
-            private boolean isAfterOpenBrace(int offset) {
-                boolean value = false;
-                if (offset < doc.getLength()) {
-                    String ch = "";
-                    int index = offset;
-                    try {
-                        do {
-                            ch = doc.getText(index, 1);
-                            index--;
-                        } while (index > 0 && "\n\t ".contains(ch));
-                    } catch (BadLocationException ex) {
-                        Exceptions.printStackTrace(ex);
-                    }
-                    value = "{".equals(ch); // NOI18N
-                }
-                return value;
-            }
             private int startOffset = -1;
             private int endOffset = -1;
             // prviousIndentDelta keeps information, when a template is inserted and
@@ -2003,7 +1991,7 @@ public class TokenFormatter {
                                 if (indexOldText >= oldText.length()
                                         && indexNewText < newText.length()) {
                                     StringBuilder sb = new StringBuilder();
-                                    boolean addNewLine = false;
+                                    boolean addNewLine;
                                     do {
                                         indexNewTextLine = newText.indexOf('\n', indexNewText); // NOI18N
                                         addNewLine = (indexNewTextLine != -1);
@@ -2090,7 +2078,7 @@ public class TokenFormatter {
 
             private boolean isBeforeEmptyStatement(List<FormatToken> formatTokens, int index) {
                 FormatToken token = formatTokens.get(index);
-                boolean value = false;
+                boolean value;
                 index++;
                 while (index < formatTokens.size() && (token.getOldText() == null
                         && token.getId() != FormatToken.Kind.WHITESPACE)) {
@@ -2209,7 +2197,7 @@ public class TokenFormatter {
         return sb.toString();
     }
 
-    private class SpacesCounter {
+    private static class SpacesCounter {
 
         private final DocumentOptions documentOptions;
 
@@ -2226,7 +2214,7 @@ public class TokenFormatter {
         }
 
         private int countSpacesForGroupedToken(final FormatToken.AssignmentAnchorToken token) {
-            int spaces = 0;
+            int spaces;
             if (documentOptions.expandTabsToSpaces) {
                 spaces = token.getMaxLength() - token.getLenght();
             } else {
@@ -2236,7 +2224,7 @@ public class TokenFormatter {
         }
 
         private int countSpacesWhenNotExpandingTabs(final FormatToken.AssignmentAnchorToken token) {
-            int spaces = 0;
+            int spaces;
             // 1 tabSize will be reduced to tabWidthToComplete...
             int tabWidthToCompleteMaxLengthToTab = documentOptions.tabSize - (token.getMaxLength() % documentOptions.tabSize);
             int tabWidthToCompleteLengthToTab = documentOptions.tabSize - (token.getLenght() % documentOptions.tabSize);
@@ -2267,7 +2255,7 @@ public class TokenFormatter {
         }
 
         private int countSpacesForCommonItem(final FormatToken.AssignmentAnchorToken token, final int tabWidthToCompleteLengthToTab, final int tabWidthToCompleteMaxLengthToTab) {
-            int spaces = 0;
+            int spaces;
             if (tabWidthToCompleteMaxLengthToTab == 0) {
                 if (tabWidthToCompleteLengthToTab == 0) {
                     spaces = token.getMaxLength() - token.getLenght();
